[gd_scene load_steps=27 format=3 uid="uid://db0qhq50jtvpu"]

[ext_resource type="Script" uid="uid://m5utyl4t7ypr" path="res://scripts/map/scene_3.gd" id="1_5uf0h"]
[ext_resource type="PackedScene" uid="uid://dibggq5mpdd75" path="res://scenes/reed.tscn" id="2_gm7q5"]
[ext_resource type="MeshLibrary" uid="uid://cvha7l7kjbjj" path="res://assets/block/grid_map.meshlib" id="3_2rqdi"]
[ext_resource type="PackedScene" uid="uid://tmiase524ugu" path="res://scenes/ui_layer.tscn" id="4_pl5ms"]
[ext_resource type="Texture2D" uid="uid://bcjlb8lpepf70" path="res://assets/background/SpriteAtlasTexture-UI_HOME_FRONT_BKG-2048x1024-fmt34.png" id="5_5uf0h"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="6_cuwey"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="7_yw7mx"]
[ext_resource type="Script" uid="uid://cuffvge5ad4aa" path="res://addons/phantom_camera/scripts/resources/phantom_camera_noise_3d.gd" id="8_t5e5o"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="9_i6f48"]
[ext_resource type="Script" uid="uid://bb6rfno8om844" path="res://scripts/map/kill.gd" id="10_ptyiu"]
[ext_resource type="Shape3D" uid="uid://dx1xr3s2e5luc" path="res://assets/collision_shape/gate.tres" id="11_pwx8t"]
[ext_resource type="PackedScene" uid="uid://73jm5qjy52vq" path="res://scenes/balloon.tscn" id="12_7drqf"]
[ext_resource type="PackedScene" uid="uid://ufdqjtc0jut6" path="res://scenes/lybgpa.tscn" id="13_gm7q5"]
[ext_resource type="PackedScene" uid="uid://67xmonxe1btu" path="res://scenes/necrass.tscn" id="14_2rqdi"]
[ext_resource type="AudioStream" uid="uid://cy0us4uldkgxw" path="res://assets/音乐/塞壬唱片-MSR; Adam Gubman - The Theme (Imperial).mp3" id="15_pl5ms"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sj5te"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_lki8s"]
sky_material = SubResource("ProceduralSkyMaterial_sj5te")

[sub_resource type="Environment" id="Environment_t6bmd"]
background_mode = 2
sky = SubResource("Sky_lki8s")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gm7q5"]
albedo_texture = ExtResource("5_5uf0h")

[sub_resource type="PlaneMesh" id="PlaneMesh_2rqdi"]
material = SubResource("StandardMaterial3D_gm7q5")
size = Vector2(140, 70)

[sub_resource type="Resource" id="Resource_jdgsh"]
script = ExtResource("7_yw7mx")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_6r6dc"]
script = ExtResource("8_t5e5o")
amplitude = 0.0
frequency = 0.2
randomize_noise_seed = 1
noise_seed = 0
rotational_noise = true
positional_noise = false
rotational_multiplier_x = 1.0
rotational_multiplier_y = 1.0
rotational_multiplier_z = 1.0
positional_multiplier_x = 1.0
positional_multiplier_y = 1.0
positional_multiplier_z = 1.0
metadata/_custom_type_script = "uid://cuffvge5ad4aa"

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_p837x"]

[sub_resource type="Animation" id="Animation_ybqas"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhantomCamera3D:noise:amplitude")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lv108"]
resource_name = "camera_noise"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhantomCamera3D:noise:amplitude")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rbtea"]
_data = {
&"RESET": SubResource("Animation_ybqas"),
&"camera_noise": SubResource("Animation_lv108")
}

[node name="Scene3" type="Node3D"]
script = ExtResource("1_5uf0h")
start_point = NodePath("StartPoint")
end_point = NodePath("EndPoint")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_t6bmd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Reed" parent="." instance=ExtResource("2_gm7q5")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.541679, 2.34482, -0.000412464)

[node name="GridMap" type="GridMap" parent="."]
unique_name_in_owner = true
mesh_library = ExtResource("3_2rqdi")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
collision_layer = 4294967295
collision_mask = 4294967295
bake_navigation = true
data = {
"cells": PackedInt32Array(0, 65535, 40, -65536, 65535, 152, -65534, 65535, 152, -65529, 65535, 655518, -65527, 65535, 655518, -65525, 65535, 655518, 196621, 65535, 655518, 262159, 65535, 655518, 262161, 65535, 655518, -65523, 65535, 655518, -65521, 65535, 655518, -65519, 65535, 655518, -65517, 65535, 655518, 196627, 65535, 655518, -65515, 65535, 655518, -65513, 65535, 655518, 65559, 65535, 655518, 196631, 65535, 655518, 393233, 65535, 655518, 196635, 65535, 655518, 196637, 65535, 655518, 65565, 65535, 655515, -65507, 65535, 655515, -65505, 65535, 655515, -65503, 65535, 655515, -65501, 65535, 655515, 196641, 65535, 655518, 196643, 65535, 655518, 327715, 65535, 1048727, -196569, 65535, 1048734, -196567, 65535, 1048734, -196565, 65535, 1048734, -196559, 65535, 1048734, -196557, 65535, 1048734, 196647, 65535, 1048734, 196649, 65535, 1048734, 196651, 65535, 1048734, -196551, 65535, 1048733, -196549, 65535, 1048733, -196547, 65535, 1048733, -196545, 65535, 1048733, 196653, 65535, 1048734, 196655, 65535, 1048734, 196657, 65535, 1048734, 196659, 65535, 1048734, 196661, 65535, 1048734, 196663, 65535, 1048734, 196665, 65535, 1048734, 196667, 65535, 1048734, 196669, 65535, 1048734, 196671, 65535, 1048734, 524323, 65535, 1048732, 196645, 65535, 1048734, -196571, 65535, 1048734, -196563, 65535, 1048734, -196553, 65535, 1048734, -196555, 65535, 1048734, -196561, 65535, 1048734, 65580, 65535, 1048734, 65591, 65535, 1048734, -196543, 65535, 1048733, 196673, 65535, 1048734, 65603, 65535, 1048734, 196675, 65535, 1048734, 196677, 65535, 1048734, 196679, 65535, 1048734, 196681, 65535, 1048734, 196683, 65535, 1048734, 196685, 65535, 1048734, -196541, 65535, 1048734, -196539, 65535, 655520, -196537, 65535, 655520, -196535, 65535, 655520, -196533, 65535, 655520, -196531, 65535, 655520, -196527, 65535, 655518, -65455, 65535, 655518, 65617, 65535, 655518, 196689, 65535, 655518, 196687, 65535, 655518, -327599, 65535, 655518, -458671, 65535, 655518, -589743, 65535, 655518, -589745, 65535, 655518, -589747, 65535, 655518, -589749, 65535, 655518, -589751, 65535, 655518, -589753, 65535, 655518, -589755, 65535, 655518, -589757, 65535, 655518, -589759, 65535, 655518, -589761, 65535, 655518, -589763, 65535, 655518, -589765, 65535, 655518, -589767, 65535, 655518, -589769, 65535, 655518, -589771, 65535, 655518, -589773, 65535, 655518, -589775, 65535, 655518, -589777, 65535, 655518, -589779, 65535, 655518, -589781, 65535, 655518, -327613, 65535, 655518, -327636, 65535, 655518, -327625, 65535, 655518, -589783, 65535, 655518, -65511, 65535, 655518, -65509, 65535, 655518, -589785, 65535, 655518, -589787, 65535, 655518, -589791, 65535, 655518, -589793, 65535, 655518, -589789, 65535, 655518, -196595, 65535, 655518, -327667, 65535, 655518, -458739, 65535, 655518, -589811, 65535, 655518, -720883, 65535, 655518, -851955, 65535, 655518, -983027, 65535, 655518, -1114099, 65535, 655518, -1245171, 65535, 655518, -1376243, 65535, 655518, -1507315, 65535, 655518, -1507313, 65535, 655518, -1507311, 65535, 655518, -1507309, 65535, 655518, -1507307, 65535, 655518, -1507305, 65535, 655518, -1507303, 65535, 655518, -1507301, 65535, 655518, -1507299, 65535, 655518, -1507297, 65535, 655518, -1507295, 65535, 655518, -1507293, 65535, 655518, -1507291, 65535, 655518, -1507289, 65535, 655518, -1507287, 65535, 655518, -720865, 65535, 655518, -851937, 65535, 655518, -983009, 65535, 655518, -1114081, 65535, 655518, -1245153, 65535, 655518, -1507285, 65535, 655518, -1507283, 65535, 655518, -1507281, 65535, 655518, -1507279, 65535, 655518, -1507277, 65535, 655518, -1507275, 65535, 655518, -1507273, 65535, 655518, -1507271, 65535, 655518, -1507269, 65535, 655518, -1507267, 65535, 655518, -720835, 65535, 655518, -851907, 65535, 655518, -982979, 65535, 655518, -1114051, 65535, 655518, -1245123, 65535, 655518, -1376195, 65535, 655518, -983011, 65535, 655518, -983013, 65535, 655518, -983015, 65535, 655518, -983017, 65535, 655518, -983019, 65535, 655518, -983021, 65535, 655518, -983023, 65535, 655518, -851951, 65535, 655518, -720879, 65535, 655518, -589807, 65535, 655518, -458735, 65535, 655518, -458731, 65535, 655518, -327659, 65535, 655518, -196587, 65535, 655518, -327663, 65535, 655518, -589795, 65535, 655518, -458725, 65535, 655518, -327653, 65535, 655518, -327649, 65535, 655518, -589797, 65535, 655518, -327655, 65535, 655518, -589803, 65535, 655518, -720875, 65535, 655518, 65617, 65533, 655507, 65572, 65533, 655507, 65573, 65533, 655507, 65574, 65533, 655507, 65575, 65533, 655507, 65576, 65533, 655507, 65577, 65533, 655507, 65578, 65533, 655507, 65579, 65533, 655507, 65580, 65533, 655507, 65581, 65533, 655507, 65582, 65533, 655507, 65583, 65533, 655507, 65584, 65533, 655507, 65585, 65533, 655507, 65586, 65533, 655507, 65587, 65533, 655507, 65588, 65533, 655507, 65589, 65533, 655507, 65590, 65533, 655507, 65591, 65533, 1048723, 65592, 65533, 655520, 65593, 65533, 655520, 65594, 65533, 655520, 65595, 65533, 655520, 65596, 65533, 655520, 65597, 65533, 655520, 65598, 65533, 655520, 65599, 65533, 655520, 65600, 65533, 655520, 65601, 65533, 655520, 65602, 65533, 655520, 65603, 65533, 655507, 65604, 65533, 655520, 65605, 65533, 655520, 65606, 65533, 655520, 65607, 65533, 655520, 65608, 65533, 655520, 65609, 65533, 655520, 65610, 65533, 655520, 65611, 65533, 655520, 65612, 65533, 655520, 65613, 65533, 655520, 65614, 65533, 655520, 65615, 65533, 655507, 65616, 65533, 655507, -65499, 65533, 655507, -65498, 65533, 655507, -65497, 65533, 655507, -65496, 65533, 655507, -65495, 65533, 655507, -65494, 65533, 655507, -65493, 65533, 655507, -65492, 65533, 655507, -65491, 65533, 655507, -65490, 65533, 655507, -65489, 65533, 655507, -65488, 65533, 655507, -65487, 65533, 655507, -65486, 65533, 655507, -65485, 65533, 655507, -65484, 65533, 655507, -65483, 65533, 655507, -65482, 65533, 655507, -65481, 65533, 655507, -65480, 65533, 655520, -65479, 65533, 655520, -65478, 65533, 655520, -65477, 65533, 655520, -65476, 65533, 655520, -65475, 65533, 655520, -65474, 65533, 655520, -65473, 65533, 655520, -65472, 65533, 655520, -65471, 65533, 655520, -65470, 65533, 655520, -65469, 65533, 655507, -65468, 65533, 655520, -65467, 65533, 655520, -65466, 65533, 655520, -65465, 65533, 655520, -65464, 65533, 655520, -65463, 65533, 655520, -65462, 65533, 655520, -65461, 65533, 655520, -65460, 65533, 655520, -65459, 65533, 655520, -65458, 65533, 655520, -65457, 65533, 655507, -130993, 65533, 655507, -196529, 65533, 655507, -262065, 65533, 655507, -327601, 65533, 1048723, -393137, 65533, 655507, -458673, 65533, 655507, -458674, 65533, 655507, -458675, 65533, 655507, -458676, 65533, 655507, -458677, 65533, 655507, -458678, 65533, 655507, -458679, 65533, 655507, -458680, 65533, 655507, -458681, 65533, 655507, -458682, 65533, 655507, -458683, 65533, 655507, -458684, 65533, 655507, -458685, 65533, 655507, -458686, 65533, 655507, -458687, 65533, 655507, -458688, 65533, 655507, -458689, 65533, 655507, -458690, 65533, 655507, -458691, 65533, 655507, -458692, 65533, 655507, -458693, 65533, 655507, -458694, 65533, 655507, -458695, 65533, 655507, -458696, 65533, 655507, -458697, 65533, 655507, -458698, 65533, 655507, -458699, 65533, 655507, -458700, 65533, 655507, -458701, 65533, 655507, -458702, 65533, 655507, -458703, 65533, 655507, -458704, 65533, 655507, -458705, 65533, 655507, -458706, 65533, 655507, -458707, 65533, 655507, -458708, 65533, 655507, -458709, 65533, 655507, -458710, 65533, 655507, -458711, 65533, 655507, -458712, 65533, 655507, -458713, 65533, 655507, -458714, 65533, 655507, -458715, 65533, 655507, -458716, 65533, 655507, -458717, 65533, 655507, -458718, 65533, 655507, -458719, 65533, 655507, -458720, 65533, 655507, -458721, 65533, 655507, -458722, 65533, 655507, -458723, 65533, 655507, -393187, 65533, 655507, -327651, 65533, 655507, -262115, 65533, 655507, -196579, 65533, 655507, -196578, 65533, 655507, -196577, 65533, 655507, -196576, 65533, 655507, -196575, 65533, 655507, -196574, 65533, 655507, -131038, 65533, 655507, -131037, 65533, 655507, -196573, 65533, 655507, -327603, 65533, 1048723, -327604, 65533, 1048723, -327605, 65533, 1048723, -327606, 65533, 1048723, -327607, 65533, 1048723, -327608, 65533, 1048723, -327609, 65533, 1048723, -327610, 65533, 1048723, -327611, 65533, 1048723, -327612, 65533, 1048723, -327613, 65533, 1048723, -327614, 65533, 1048723, -327615, 65533, 655507, -327616, 65533, 655507, -327617, 65533, 655507, -327618, 65533, 655507, -327619, 65533, 655507, -327620, 65533, 655507, -327621, 65533, 655507, -327622, 65533, 655507, -327623, 65533, 655507, -327624, 65533, 655507, -327625, 65533, 655507, -327626, 65533, 1048723, -327627, 65533, 1048723, -327628, 65533, 1048723, -327629, 65533, 655507, -327630, 65533, 655507, -327631, 65533, 1048723, -327632, 65533, 1048723, -327633, 65533, 1048723, -327634, 65533, 1048723, -327635, 65533, 1048723, -327636, 65533, 655507, -327637, 65533, 655507, -327638, 65533, 1048723, -327639, 65533, 1048723, -327640, 65533, 1048723, -327641, 65533, 1048723, -327642, 65533, 1048723, -327643, 65533, 1048723, -327644, 65533, 1048723, -327645, 65533, 1048723, -327646, 65533, 655507, -327647, 65533, 655507, 131129, 65533, 655520, 131130, 65533, 655520, 66, 65533, 655520, 65, 65533, 655520, 77, 65533, 655520, 78, 65533, 655520, 131150, 65533, 655520, -196581, 65533, 655464, -196582, 65533, 655464, -196583, 65533, 655464, -196584, 65533, 655464, -196585, 65533, 655464, -262121, 65533, 655464, -327657, 65533, 655464, -393193, 65533, 655464, -458729, 65533, 655464, -458728, 65533, 655464, -458727, 65533, 655464, -524264, 65533, 655464, -589800, 65533, 655464, -589801, 65533, 655464, -589799, 65533, 655464, -655335, 65533, 655464, -655336, 65533, 655464, -655337, 65533, 655464, -655338, 65533, 655464, -720874, 65533, 655464, -720873, 65533, 655464, -786409, 65533, 655464, -786408, 65533, 655464, -786407, 65533, 655464, -786406, 65533, 655464, -720870, 65533, 655464, -720869, 65533, 655464, -720868, 65533, 655464, -720867, 65533, 655464, -786403, 65533, 655464, -851939, 65533, 655464, -851940, 65533, 655464, -851941, 65533, 655464, -851942, 65533, 655464, -851943, 65533, 655464, -851944, 65533, 655464, -851945, 65533, 655464, -851946, 65533, 655464, -851947, 65533, 655464, -851948, 65533, 655464, -851949, 65533, 655464, -851950, 65533, 655464, -786414, 65533, 655464, -720878, 65533, 655464, -655342, 65533, 655464, -589806, 65533, 655464, -524270, 65533, 655464, -458734, 65533, 655464, -393198, 65533, 655464, -327662, 65533, 655464, -262126, 65533, 655464, -196590, 65533, 655464, -196591, 65533, 655464, -196592, 65533, 655464, -196593, 65533, 655464, -196589, 65533, 655464, -262125, 65533, 655464, -327661, 65533, 655464, -393197, 65533, 655464, -458733, 65533, 655464, -524269, 65533, 655464, -589805, 65533, 655464, -655341, 65533, 655464, -720877, 65533, 655464, -786413, 65533, 655464, -327665, 65533, 655460, -393201, 65533, 655460, -458737, 65533, 655460, -524273, 65533, 655460, -589809, 65533, 655460, -655345, 65533, 655460, -720881, 65533, 655460, -786417, 65533, 655460, -851953, 65533, 655460, -917489, 65533, 655460, -983025, 65533, 655460, -1048561, 65533, 655460, -1114097, 65533, 655460, -1179633, 65533, 655460, -1245169, 65533, 655460, -1310705, 65533, 655460, -1376241, 65533, 655460, -1376240, 65533, 655460, -1376239, 65533, 655460, -1376238, 65533, 655460, -1376237, 65533, 655460, -1376236, 65533, 655460, -1376235, 65533, 655460, -1376234, 65533, 655460, -1376233, 65533, 655460, -1376232, 65533, 655460, -1376231, 65533, 655460, -1376230, 65533, 655460, -1376229, 65533, 655460, -1376228, 65533, 655460, -1376227, 65533, 655460, -1310691, 65533, 655460, -1245155, 65533, 655460, -1179619, 65533, 655460, -1114083, 65533, 655460, -1114084, 65533, 655460, -1114085, 65533, 655460, -1114086, 65533, 655460, -1114087, 65533, 655460, -1114088, 65533, 655460, -1114089, 65533, 655460, -1114090, 65533, 655460, -1114091, 65533, 655460, -1114092, 65533, 655460, -1114093, 65533, 655460, -1114094, 65533, 655460, -1179630, 65533, 655460, -1179631, 65533, 655460, -1114095, 65533, 655460, -1179629, 65533, 655460, -1179628, 65533, 655460, -1179627, 65533, 655460, -1179626, 65533, 655460, -1179625, 65533, 655460, -1179624, 65533, 655460, -1245160, 65533, 655460, -1245159, 65533, 655460, -1245158, 65533, 655460, -1245157, 65533, 655460, -1245161, 65533, 655460, -1245162, 65533, 655460, -1245163, 65533, 655460, -1245164, 65533, 655460, -1245165, 65533, 655460, -1245166, 65533, 655460, -1245167, 65533, 655460, -655327, 65533, 393364, -786399, 65533, 393364, -917471, 65533, 393364, -1048543, 65533, 393364, -1179615, 65533, 393364, -1310687, 65533, 393364, -1310689, 65533, 393284, -655301, 65533, 262292, -786373, 65533, 262292, -917445, 65533, 262292, -1048517, 65533, 262292, -1179589, 65533, 262292, -1310661, 65533, 262292, -655323, 65533, 262292, -786395, 65533, 262292, -917467, 65533, 262292, -1048539, 65533, 262292, -1179611, 65533, 262292, -1310683, 65533, 262292, -655319, 65533, 262292, -786391, 65533, 262292, -917463, 65533, 262292, -1048535, 65533, 262292, -1179607, 65533, 262292, -1310679, 65533, 262292, -655305, 65533, 393364, -786377, 65533, 393364, -917449, 65533, 393364, -1048521, 65533, 393364, -1179593, 65533, 393364, -1310665, 65533, 393364, -1310669, 65533, 393364, -1179597, 65533, 393364, -1048525, 65533, 393364, -917453, 65533, 393364, -786381, 65533, 393364, -655309, 65533, 393364, -655315, 65533, 393364, -786387, 65533, 393364, -917459, 65533, 393364, -1048531, 65533, 393364, -1179603, 65533, 393364, -1310675, 65533, 393364, -655313, 65533, 262292, -786385, 65533, 262292, -917457, 65533, 262292, -1048529, 65533, 262292, -1179601, 65533, 262292, -1310673, 65533, 262292, -720861, 65533, 1048731, -851933, 65533, 1048731, -983005, 65533, 1048731, -1114077, 65533, 1048731, -1245149, 65533, 1048731, -1376221, 65533, 1048731, -720857, 65533, 1048731, -851929, 65533, 1048731, -983001, 65533, 1048731, -1114073, 65533, 1048731, -1245145, 65533, 1048731, -1376217, 65533, 1048731, -720853, 65533, 1048731, -851925, 65533, 1048731, -982997, 65533, 1048731, -1114069, 65533, 1048731, -1245141, 65533, 1048731, -1376213, 65533, 1048731, -720847, 65533, 1048731, -851919, 65533, 1048731, -982991, 65533, 1048731, -1114063, 65533, 1048731, -1245135, 65533, 1048731, -1376207, 65533, 1048731, -720843, 65533, 1048731, -851915, 65533, 1048731, -982987, 65533, 1048731, -1114059, 65533, 1048731, -1245131, 65533, 1048731, -1376203, 65533, 1048731, -720839, 65533, 1048731, -851911, 65533, 1048731, -982983, 65533, 1048731, -1114055, 65533, 1048731, -1245127, 65533, 1048731, -1376199, 65533, 1048731, 57, 65533, 1048733, 58, 65533, 1048733, 59, 65533, 1048733, 60, 65533, 1048733, 61, 65533, 1048733, 62, 65533, 1048733, 63, 65533, 1048733, 64, 65533, 1048733, 69, 65533, 1048733, 70, 65533, 1048733, 71, 65533, 1048733, 72, 65533, 1048733, 73, 65533, 1048733, 74, 65533, 1048733, 75, 65533, 1048733, 76, 65533, 1048733, 196644, 65533, 1048723, 196645, 65533, 1048723, 196646, 65533, 1048723, 196647, 65533, 1048723, 196648, 65533, 1048723, 196649, 65533, 1048723, 196650, 65533, 1048723, 196651, 65533, 1048723, 196652, 65533, 1048723, 196653, 65533, 1048723, 196654, 65533, 1048723, 196655, 65533, 1048723, 196656, 65533, 1048723, 196657, 65533, 1048723, 196658, 65533, 1048723, 196659, 65533, 1048723, 196660, 65533, 1048723, 196661, 65533, 1048723, 196662, 65533, 1048723, 196663, 65533, 1048723, 131127, 65533, 1048723, 55, 65533, 1048723, 54, 65533, 1048723, 53, 65533, 1048723, 52, 65533, 1048723, 51, 65533, 1048723, 50, 65533, 1048723, 49, 65533, 1048723, 48, 65533, 1048723, 47, 65533, 1048723, 46, 65533, 1048723, 45, 65533, 1048723, 44, 65533, 1048723, 43, 65533, 1048723, 42, 65533, 1048723, 41, 65533, 1048723, 40, 65533, 1048723, 39, 65533, 1048723, 38, 65533, 1048723, 37, 65533, 1048723, -393174, 65533, 1048723, -393173, 65533, 1048723, -393172, 65533, 1048723, -393171, 65533, 1048723, -393166, 65533, 1048723, -393165, 65533, 1048723, -393162, 65533, 1048723, -393161, 65533, 1048723, -393160, 65533, 1048723, -393159, 65533, 1048723, -393158, 65533, 1048723, -393157, 65533, 1048723, -393156, 65533, 1048723, -393155, 65533, 1048723, -393154, 65533, 1048723, -393153, 65533, 1048723, -393152, 65533, 1048723, -393151, 65533, 1048723, -393150, 65533, 1048723, -393149, 65533, 1048723, -393148, 65533, 1048723, -393147, 65533, 1048723, -393146, 65533, 1048723, -393145, 65533, 1048723, -393144, 65533, 1048723, -393143, 65533, 1048723, -393142, 65533, 1048723, -393141, 65533, 1048723, -327602, 65533, 1048723, -196530, 65533, 1048723, -196531, 65533, 1048723, -196532, 65533, 1048723, -196533, 65533, 1048723, -196534, 65533, 1048723, -196535, 65533, 1048723, -196536, 65533, 1048723, -196537, 65533, 1048723, -196538, 65533, 1048723, -262066, 65533, 1048723, -262067, 65533, 1048723, -262068, 65533, 1048723, -262069, 65533, 1048723, -196539, 65533, 1048723, -196540, 65533, 1048723, -196541, 65533, 1048723, -196542, 65533, 1048723, -196543, 65533, 1048723, -196544, 65533, 1048723, -196545, 65533, 1048723, -196546, 65533, 1048723, -196547, 65533, 1048723, -196548, 65533, 1048723, -196549, 65533, 1048723, -196550, 65533, 1048723, -196551, 65533, 1048723, -196552, 65533, 1048723, -196553, 65533, 1048723, -262089, 65533, 1048723, -262090, 65533, 1048723, -262091, 65533, 1048723, -262092, 65533, 1048723, -262093, 65533, 1048723, -262094, 65533, 1048723, -262095, 65533, 1048723, -262096, 65533, 1048723, -262097, 65533, 1048723, -262098, 65533, 1048723, -262099, 65533, 1048723, -262100, 65533, 1048723, -262101, 65533, 1048723, -262102, 65533, 1048723, -262103, 65533, 1048723, -262104, 65533, 1048723, -262105, 65533, 1048723, -262106, 65533, 1048723, -262107, 65533, 1048723, -262108, 65533, 1048723, -786413, 65534, 852029, 393247, 65534, 983101, 79, 65534, 983101, -1310705, 65534, 786493, -524209, 65535, 40, -1441763, 65535, 40)
}
metadata/_editor_floor_ = Vector3(-1, 11, -1)

[node name="UILayer" parent="." instance=ExtResource("4_pl5ms")]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 44.1565, -8.52182, -16.1413)
mesh = SubResource("PlaneMesh_2rqdi")

[node name="PhantomCamera3D" type="Node3D" parent="." node_paths=PackedStringArray("follow_target")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.541679, 2.34482, 3.99959)
top_level = true
script = ExtResource("6_cuwey")
priority = 3
follow_mode = 2
follow_target = NodePath("../Reed/CameraPosition")
tween_resource = SubResource("Resource_jdgsh")
follow_offset = Vector3(0, 0, 4)
follow_damping = true
follow_damping_value = Vector3(0.5, 0, 0.1)
follow_axis_lock = 3
dead_zone_width = 0.8
dead_zone_height = 0.2
show_viewfinder_in_play = true
noise = SubResource("Resource_6r6dc")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="Camera3D" type="Camera3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.541679, 2.34482, 3.99959)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("9_i6f48")

[node name="Kill" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.19612, 0)
script = ExtResource("10_ptyiu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Kill"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -33.1214, 0)
shape = SubResource("WorldBoundaryShape3D_p837x")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.21712, 0)
collision_layer = 4294967295
collision_mask = 4294967295

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -33.1214, 0)
shape = SubResource("WorldBoundaryShape3D_p837x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_rbtea")
}

[node name="StartPoint" type="Area3D" parent="." groups=["checkpoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.489996, 1.36513, -0.47639)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StartPoint"]
shape = ExtResource("11_pwx8t")

[node name="EndPoint" type="Area3D" parent="." groups=["checkpoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.49, 20.34, -0.476)

[node name="CollisionShape3D" type="CollisionShape3D" parent="EndPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 71.9788, -40.3391, 0)
shape = ExtResource("11_pwx8t")

[node name="CheckPoint" type="Area3D" parent="." groups=["checkpoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.4716, -6.81046, -0.47639)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CheckPoint"]
shape = ExtResource("11_pwx8t")

[node name="CheckPoint2" type="Area3D" parent="." groups=["checkpoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.4607, -20.7734, -0.47639)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CheckPoint2"]
shape = ExtResource("11_pwx8t")

[node name="Balloon" parent="." instance=ExtResource("12_7drqf")]
unique_name_in_owner = true
visible = false

[node name="Lybgpa" parent="." instance=ExtResource("13_gm7q5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.2343, 1.43552, 0)

[node name="Lybgpa5" parent="." instance=ExtResource("13_gm7q5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.6535, -12.446, 0)

[node name="Lybgpa4" parent="." instance=ExtResource("13_gm7q5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.1763, -6.50416, 0)

[node name="Lybgpa3" parent="." instance=ExtResource("13_gm7q5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 73.129, -0.0965619, 0)

[node name="Lybgpa2" parent="." instance=ExtResource("13_gm7q5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.9883, 0.0799949, 0)

[node name="Necrass" parent="." node_paths=PackedStringArray("reed") instance=ExtResource("14_2rqdi")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46.7259, -20.3112, 0.138857)
reed = NodePath("../Reed")
hp = 50

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("15_pl5ms")
autoplay = true
parameters/looping = true

[connection signal="body_entered" from="Kill" to="Kill" method="_on_body_entered"]
[connection signal="body_entered" from="CheckPoint2" to="." method="_on_boss_point_body_entered"]
[connection signal="finished" from="Balloon" to="." method="_on_balloon_finished"]
[connection signal="dead" from="Necrass" to="." method="_on_necrass_dead"]

[editable path="Reed"]
[editable path="UILayer"]
